apps/nextcloud/nextcloud/networkpolicies/cron-egress-nextcloud.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cron-egress-nextcloud
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app: nextcloud
      component: cronjob
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sServiceSelector:
            selector:
              matchLabels:
                app: nextcloud
                component: fpm-nginx
            namespace: nextcloud
      toPorts:
        - ports:
            - port: "80"
