apps/nextcloud/nextcloud/networkpolicies/egress-nextcloud.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-nextcloud
  namespace: nextcloud
spec:
  selector: >-
    app == 'nextcloud' &&
    component == 'fpm-nginx'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: >-
          app == 'nextcloud' &&
          component == 'postgres'
        ports:
          - 5432
    - action: Allow
      protocol: TCP
      destination:
        selector: >-
          app == 'nextcloud' &&
          component == 'redis'
        ports:
          - 6379
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
        ports:
          - 8443    # to access load balancer (https://sso.${BASE_DOMAIN})
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
          - 443
          - 465
