apps/nextcloud/nextcloud/networkpolicies/ingress-nginx-egress-nextcloud.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-nextcloud
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: nextcloud
            component: fpm-nginx
            "k8s:io.kubernetes.pod.namespace": nextcloud
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
