apps/nextcloud/nextcloud/networkpolicies/nextcloud-egress-healthchecks.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-egress-healthchecks
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app: nextcloud
      component: cronjob
  egress:
    - toServices:
        - k8sService:
            serviceName: healthchecks
            namespace: healthchecks
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
