apps/nextcloud/nextcloud/networkpolicies/nextcloud-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'nextcloud'
        selector: >-
          app == 'nextcloud' &&
          component == 'fpm-nginx'
        ports:
          - 80
