apps/nextcloud/nextcloud/networkpolicies/nextcloud.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app: nextcloud
      component: fpm-nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
        - matchLabels:
            app: nextcloud
            component: cronjob
            io.kubernetes.pod.namespace: nextcloud
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: postgres
            namespace: nextcloud
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: redis
            namespace: nextcloud
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: ${SMTP_DOMAIN}
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
