apps/nextcloud/nextcloud/networkpolicies/traefik-egress-nextcloud.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-nextcloud
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            app: nextcloud
            component: fpm-nginx
            io.kubernetes.pod.namespace: nextcloud
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
